Website issues fix (scrollbarpocalypse!!!)

--- a/docs/stylesheet.scss
+++ b/docs/stylesheet.scss
@@ -48,7 +48,7 @@ main {
 		color: #fff;
 
 		&.experimental {
-			height: 50vh;
+			height: 55vh;
 		}
 
 		.center {
@@ -311,14 +311,14 @@ main {
   	.wrapper {
   		width: 100%;
   		height: auto;
-  		overflow: scroll;
+  		overflow: auto;
   		
   		.header {
   			width: 100%;
   			height: 64px;
   			background-color: #eee;
   			display: block;
-  			overflow: auto;
+  			overflow: hidden;
 
   			.bgi {
   				height: 64px;
